# wikify

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  DEVELOPMENT_ROADMAP_v0.2.0.md  Dockerfile  README.md  docker-compose.yml
config/: wikify.toml
docs/: DeepWiki_Technical_Analysis.md
tests/common/: mod.rs
tests/integration/: repository_e2e_test.rs
tests/performance/: repository_performance_test.rs
tests/scenarios/: user_workflow_test.rs
web/: .env.example  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
web/scripts/: dev.cjs  dev.js
web/src/: App.tsx  index.css
web/src/__tests__/: setup.ts
web/src/__tests__/utils/: formatters.test.ts
web/src/components/: AuthProvider.tsx  BackendConnectionSettings.tsx  BackendConnectionStatus.tsx  ChatInterface.tsx  IndexingProgress.tsx  Markdown.tsx  RepositoryManager.tsx  ServerStatusBar.tsx  ThemeToggle.tsx  UniversalProgress.tsx  WikiEmptyState.tsx  WikiExportDialog.tsx  WikiGenerationDialog.tsx  WikiSearch.tsx  WikiViewer.tsx
web/src/components/auth/: LoginForm.tsx  RegisterForm.tsx  UserMenu.tsx
web/src/components/chat/: ChatInput.tsx  MessageActions.tsx  MessageBubble.tsx  MessageList.tsx  SourceDocuments.tsx  StreamingContent.tsx  index.ts
web/src/components/chat/__demo__/: MarkdownDemo.tsx  MessageHeightDemo.tsx
web/src/components/chat/__tests__/: MessageBubble.test.tsx  MessageList.integration.test.tsx  markdown-rendering.test.tsx
web/src/components/chat/improved/: MessageListWithStickToBottom.tsx  PromptInput.tsx
web/src/components/research/: DeepResearchInterface.tsx  ResearchNavigation.tsx  ResearchProgressIndicator.tsx  ResearchStageViewer.tsx  StreamingResearchInterface.tsx  index.ts
web/src/components/ui/: button.tsx
web/src/hooks/: use-api.ts  use-auth.ts  use-deep-research.ts  use-progress-integration.ts  use-scroll-to-bottom.ts  use-streaming-research.ts  use-websocket-manager.ts  use-websocket.ts
web/src/lib/: api-client.ts  backend-connection.ts  constants.ts  search-engine.ts  websocket-client.ts  wiki-exporter.ts
web/src/pages/: Index.tsx  Login.tsx  Register.tsx  Research.tsx  StreamingDemo.tsx
web/src/store/: app-store.ts  chat-store.ts  progress-store.ts
web/src/types/: api.ts  global.d.ts  progress.ts  search.ts  ui.ts  websocket.ts
web/src/utils/: formatters.ts  validators.ts
wikify-applications/: Cargo.toml
wikify-applications/src/: chat.rs  lib.rs
wikify-applications/src/auth/: context.rs  identity.rs  mod.rs  permissions.rs
wikify-applications/src/repository/: config.rs  errors.rs  manager.rs  mod.rs  storage.rs  types.rs
wikify-applications/src/research/: engine.rs  history.rs  mod.rs  planner.rs  strategy.rs  synthesizer.rs  templates.rs  types.rs
wikify-applications/src/session/: manager.rs  mod.rs  storage.rs  types.rs
wikify-applications/tests/: research_engine_test.rs  research_templates_unit.rs  simple_strategy_test.rs  strategy_system_test.rs
wikify-cli/: Cargo.toml
wikify-cli/src/: main.rs
wikify-core/: Cargo.toml
wikify-core/src/: async_utils.rs  config.rs  error.rs  lib.rs  logging.rs  traits.rs  types.rs
wikify-core/tests/: integration_tests.rs
wikify-indexing/: Cargo.toml
wikify-indexing/src/: document_processor.rs  indexer.rs  lib.rs  pipeline.rs
wikify-rag/: Cargo.toml
wikify-rag/examples/: enhanced_indexing_demo.rs
wikify-rag/src/: chat.rs  embeddings.rs  indexing_manager.rs  lib.rs  llm_client.rs  rag_pipeline.rs  retriever.rs  storage.rs  token_counter.rs  types.rs
wikify-rag/src/indexing/: factory.rs  indexer.rs  mod.rs  pipeline.rs  traits.rs
wikify-rag/src/indexing/enhanced/: cheungfun_pipeline.rs  enhanced_indexer.rs  mod.rs
wikify-rag/src/indexing/legacy/: indexer.rs  mod.rs
wikify-rag/tests/: enhanced_indexing_integration.rs
wikify-repo/: Cargo.toml
wikify-repo/src/: analyzer.rs  filter.rs  lib.rs  processor.rs
wikify-repo/src/api/: bitbucket.rs  gitea.rs  github.rs  gitlab.rs  mod.rs  tests.rs
wikify-web/: Cargo.toml  README.md
wikify-web/benches/: server_benchmarks.rs
wikify-web/data/: wikify.db
wikify-web/docs/: API.md  README.md  asyncapi.yaml  openapi.compact.json  openapi.json  openapi.yaml
wikify-web/migrations/: 001_initial.sql  002_add_wiki_table.sql
wikify-web/src/: auth.rs  cache.rs  config_validator.rs  handlers.rs  lib.rs  main.rs  metrics.rs  middleware.rs  openapi.rs  routes.rs  security.rs  server.rs  simple_database.rs  state.rs  templates.rs  websocket.rs
wikify-web/src/auth/: api_keys.rs  database.rs  handlers.rs  jwt.rs  tests.rs  users.rs
wikify-web/src/handlers/: chat.rs  config.rs  files.rs  health.rs  mod.rs  repository.rs  research.rs  wiki.rs
wikify-web/src/handlers/types/: chat.rs  common.rs  files.rs  mod.rs  repository.rs  research.rs  wiki.rs
wikify-web/static/: index.html
wikify-web/templates/: chat.html  error.html  index.html  repository.html  wiki.html
wikify-web/tests/: README.md  api_endpoints_test.rs  auth_permissions_test.rs  auth_system_test.rs  helpers.rs  integration_tests.rs  repository_architecture_test.rs  repository_query_test.rs  research_engine_integration.rs  research_templates_integration.rs  simple_websocket_test.rs  streaming_research_integration.rs  websocket_progress_test.rs
wikify-wiki/: Cargo.toml
wikify-wiki/src/: cache.rs  content_strategy.rs  enhanced_prompts.rs  export.rs  generator.rs  lib.rs  markdown_organizer.rs  priority_system.rs  prompts.rs  structured_generator.rs  types.rs
