[workspace]
members = [
    "wikify-core",
    "wikify-repo",
    "wikify-indexing",
    "wikify-rag",
    "wikify-wiki",
    "wikify-cli",
    "wikify-web",
]

[workspace.dependencies]
# 核心RAG功能
cheungfun = { git = "https://github.com/YumchaLabs/cheungfun" }
siumai = "0.9.0"

tokio = { version = "1.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

git2 = "0.18"

walkdir = "2.0"

reqwest = { version = "0.11", features = ["json"] }

config = "0.14"
toml = "0.8"
dirs = "5.0"
url = "2.0"
regex = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
fastrand = "2.0"

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }

axum = "0.7"
tower = "0.4"

clap = { version = "4.0", features = ["derive"] }


