[workspace]
resolver = "2"
members = [
    "wikify-core",
    "wikify-repo",
    "wikify-indexing",
    "wikify-rag",
    "wikify-wiki",
    "wikify-cli",
    "wikify-web",
]

[workspace.dependencies]
# 核心RAG功能
cheungfun = { git = "https://github.com/YumchaLabs/cheungfun" }
siumai = "0.9.1"

tokio = { version = "1.0", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
thiserror = "2.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

git2 = "0.20"

walkdir = "2.0"

reqwest = { version = "0.12", features = ["json"] }

config = "0.15"
toml = "0.9"
dirs = "6.0"
url = "2.0"
regex = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
fastrand = "2.0"

sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls"] }

axum = "0.8"
tower = "0.5.2"

clap = { version = "4.0", features = ["derive"] }


