[package]
name = "wikify-indexing"
version = "0.1.0"
edition = "2021"

[dependencies]
wikify-core = { path = "../wikify-core" }

# Cheungfun RAG framework
cheungfun = { git = "https://github.com/YumchaLabs/cheungfun" }
cheungfun-core = { git = "https://github.com/YumchaLabs/cheungfun" }
cheungfun-indexing = { git = "https://github.com/YumchaLabs/cheungfun" }

# Async and utilities
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

# File system operations
walkdir = { workspace = true }
tempfile = "3.0"

# Text processing
regex = { workspace = true }
uuid = { workspace = true }
