[package]
name = "wikify-rag"
version = "0.1.0"
edition = "2021"

[dependencies]
wikify-core = { path = "../wikify-core" }
wikify-indexing = { path = "../wikify-indexing" }
wikify-repo = { path = "../wikify-repo" }

# Siumai LLM framework
siumai = { workspace = true }

# Cheungfun for vector operations
cheungfun-core = { git = "https://github.com/YumchaLabs/cheungfun" }

# Async and utilities
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Vector operations and embeddings
uuid = { workspace = true }

# Text processing
regex = { workspace = true }

# Storage and persistence
dirs = "6.0"
chrono = { version = "0.4", features = ["serde"] }

# Progress display
indicatif = "0.18"

# Token counting
tiktoken-rs = "0.7"
